Bug Fix: use invisible rather than overflow-hidden

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer components {
     .collapsible-content.closed {
-        @apply transition-all duration-300 ease-in-out max-h-0 opacity-0 pt-0 pb-0;
+        @apply transition-all duration-300 ease-in-out max-h-0 opacity-0 pt-0 pb-0 invisible;
     }
     .collapsible-content.open {
         @apply transition-all duration-500 ease-in-out max-h-full;
